@@ -1,1 +1,1 @@
-#define luatex_svn_revision 7395
+#define luatex_svn_revision 7396
